# nexus-lib

./: Cargo.toml  LICENSE  README.md  STYLE.md
.github/workflows/: rust.yml
archive/: example.nex  example_2.nex
builtin/: types.nx
crates/evaluator/: Cargo.toml
crates/lexer/: Cargo.toml
crates/nexus-api/: Cargo.toml
crates/nx-api/: Cargo.toml
crates/nx-evaluator/: Cargo.toml
crates/nx-lexer/: Cargo.toml
crates/nx-parser/: Cargo.toml
crates/parser/: Cargo.toml
design/: core-lib.md  fields.md  general.md  null-handling.md  project-structure.md  test.nx
docs/: acess-modifier.md  allowed_chars.md  fields.md  variables.md
docs/beginnners/: advanced_variables.md  functions.md  setup.md  your_first_program.md
docs/design/: core-lib.md  fields.md  general.md
docs/examples/: test.nx
examples/: comparison.md  experimental.nex  interpreter_testing.nx  main.nex  main.nx  test.nx  test_2.nex
examples/project-structure-test/: project-structure-test.nxproj
lib/: types.nx
scripts/: tokens.py
src/: ast.rs  builtin.rs  builtins.rs  enviroment.rs  errors.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  object.rs  parser.rs  tests.rs  tokens.rs  util.rs
src/builtin/: builtins.rs  errors.rs  mod.rs
src/evaluator/: builtins.rs  env.rs  enviroment.rs  evaluator.rs  mod.rs  object.rs  objects.rs  tests.rs
src/lexer/: lexer.rs  mod.rs  tests.rs  tokens.rs
src/parser/: ast.rs  mod.rs  parser.rs  tests.rs
src/util/: mod.rs
test/: lexer-test.nx  main.nx  test.nx
testing/src/: main.rs
tests/evaluator/: test.nx
tests/lexer/: comments.nx  symbols.nx  (+2 more)
(+31 files in other folders)
