[workspace]
members = [
    "crates/nx-api",       # Api for building a custom frontend, parsing source code in a rust lib
    "crates/lexer",     # Lexer for tokenizing source code
    "crates/parser",    # Parser for parsing token stream produced by lexer
    "crates/evaluator", # Evaluator for evaluting parsed representation as an alternative to the vm
]
resolver = "2"